--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -256,7 +256,7 @@ p.pagePara {
 
 .ourMissionVissionCardMain {
   position: relative;
-  z-index: 99;
+  // z-index: 99;
 }
 
 .ourMissionVissionSection {
