--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -146,10 +146,12 @@ header {
     overflow: auto;
     border: 0.1rem solid #ffffff7a;
     background: #0000008f;
+    background: #f7f7f7;
 
     &.navbar-active {
       display: block;
       left: 0;
+      z-index: 100;
     }
 
     .get-in-touch {
@@ -461,6 +463,7 @@ header {
   .menu-title {
     margin-bottom: 2.7rem;
     font-size: 1.7rem;
+    color: #000;
   }
 
   .sub-menu {
