--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -384,17 +384,17 @@ p.pagePara {
   position: relative;
   padding: 30px 0;
 
-  &::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 0;
-    height: 100%;
-    width: 1px;
-    background-color: #D1D1D1;
-  }
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   left: 0;
+  //   right: 0;
+  //   margin: auto;
+  //   top: 0;
+  //   height: 100%;
+  //   width: 1px;
+  //   background-color: #D1D1D1;
+  // }
 
   .ourJourneySectionInner {
     img {
