--- a/src/assets/scss/layout/_product.scss
+++ b/src/assets/scss/layout/_product.scss
@@ -198,22 +198,22 @@
     }
   }
 
-  .product-geo-verse {
-    .section-sub-title {
-      text-transform: uppercase;
-      letter-spacing: 0.9rem;
-      word-spacing: 0.5rem;
-      font-weight: 500;
-    }
-  }
-  .product-math-verse {
-    .section-sub-title {
-      text-transform: uppercase;
-      letter-spacing: 0.9rem;
-      word-spacing: 0.5rem;
-      font-weight: 500;
-    }
-  }
+  // .product-geo-verse {
+  //   .section-sub-title {
+  //     text-transform: uppercase;
+  //     letter-spacing: 0.9rem;
+  //     word-spacing: 0.5rem;
+  //     font-weight: 500;
+  //   }
+  // }
+  // .product-math-verse {
+  //   .section-sub-title {
+  //     text-transform: uppercase;
+  //     letter-spacing: 0.9rem;
+  //     word-spacing: 0.5rem;
+  //     font-weight: 500;
+  //   }
+  // }
 
   .product-banner {
     // margin-bottom: 5.4rem;
