--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -672,6 +672,10 @@ header {
     padding-top: 20px;
   }
 
+  header .product-list a{
+    font-size: 14px;
+  }
+
   .forWebView,
   header .sub-menu {
     display: none !important;
