--- a/src/assets/scss/layout/_info.scss
+++ b/src/assets/scss/layout/_info.scss
@@ -56,8 +56,8 @@
 
 
   .counter-section {
-    border: 0.1rem solid #ffffff;
-    border-radius: 2rem;
+    // border: 0.1rem solid #ffffff;
+    // border-radius: 2rem;
     padding: 4.5rem 2.5rem;
   }
 
