--- a/src/assets/scss/layout/_blog-card.scss
+++ b/src/assets/scss/layout/_blog-card.scss
@@ -3,8 +3,7 @@
 .blog-section {
   .latest-blog {
     .loading {
-      .card {
-      }
+      .card {}
     }
   }
 
@@ -21,18 +20,22 @@
       .read-more {
         display: none;
       }
+
       .blog-title {
         height: 2rem;
       }
-      .blog-content {
-      }
+
+      .blog-content {}
+
       .blog-date {
         width: 5rem;
         height: 1.5rem;
       }
+
       img {
         background-color: #eeeeee;
       }
+
       .blog-title,
       .blog-content,
       .blog-date {
@@ -42,12 +45,10 @@
         animation: shimmer 2s infinite linear;
         font-size: 0;
         border-radius: 1rem;
-        background-image: linear-gradient(
-          90deg,
-          #b1b1b1 0%,
-          #c8c8c8 50%,
-          #b1b1b1 100%
-        );
+        background-image: linear-gradient(90deg,
+            #b1b1b1 0%,
+            #c8c8c8 50%,
+            #b1b1b1 100%);
       }
     }
   }
@@ -238,15 +239,20 @@
 
   .blog-list {
     .card {
-      &:first-child {
-        background-color: #f5f5f5;
-      }
+      // &:first-child {
+      //   background-color: #f5f5f5;
+      // }
       display: flex;
       flex-direction: column;
 
       border: 0.1rem solid #d1d1d1;
       padding: 1.8rem;
       border-radius: 2rem;
+      transition: .3s all ease-in-out;
+
+      &:hover {
+        background-color: #f5f5f5;
+      }
     }
 
     .date-wrap {
@@ -265,6 +271,7 @@
         object-fit: cover;
         object-position: top;
       }
+
       &-body {
         height: 100%;
         display: flex;
