Text change SchoolVR

--- a/src/layouts/schoolvr.html
+++ b/src/layouts/schoolvr.html
@@ -108,12 +108,12 @@
   </div>
   <div class="about-section">
     <div class="about-logo">
-      <img class="fill-logo" src={'/img/logo-text.webp} alt={'school vr'} />
+      <img class="fill-logo" src={'/img/logo-text.webp} alt={'SchoolVR'} />
     </div>
 
     <div class="about-content">
       <h5 class="head-title">About</h5>
-      <img src={'/img/logo-fill.webp'} alt={'school vr'} />
+      <img src={'/img/logo-fill.webp'} alt={'SchoolVR'} />
       <span class="section-sub-title">
         Introducing SchoolVR, a state-of-the-art Virtual Reality (VR)
         educational app designed to revolutionize the learning experience. With
