--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -256,7 +256,9 @@ p.pagePara {
 
 .ourMissionVissionCardMain {
   position: relative;
+  grid-template-columns: repeat(2, 1fr);
   // z-index: 99;
+  gap: 50px;
 }
 
 .ourMissionVissionSection {
@@ -340,12 +342,23 @@ p.pagePara {
 
 
 .ourMissionVissionCard {
-  padding: 40px;
+  padding: 35px 25px;
   border-radius: 20px;
   box-shadow: 0px 0px 30px 0px #C1D0DC1A;
   background: #FFFFFF99;
   backdrop-filter: blur(10px);
   color: #292D32;
+
+  .miniText {
+    font-family: Gilroy-SemiBold;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 15.4px;
+    color: #292D32;
+    padding-bottom: 17px;
+    border-bottom: 1px solid #DEDEDE;
+    margin-bottom: 20px;
+  }
 
   h4 {
     font-family: Gilroy-SemiBold;
@@ -353,7 +366,7 @@ p.pagePara {
     font-weight: 400;
     line-height: 40px;
     color: #292D32;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
   }
 
   h5 {
@@ -371,13 +384,50 @@ p.pagePara {
     font-weight: 400;
     line-height: 16.8px;
     text-align: justify;
+    color: #292D32;
+    margin: 0;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+
+    svg {
+      width: fit-content;
+    }
   }
 
   img {
-    max-width: 345px;
+    height: 88px;
     object-fit: contain;
   }
 
+}
+
+.unleaseTextNew {
+  color: #292D32;
+  margin-bottom: 50px;
+
+  h4 {
+    font-family: Gilroy-SemiBold;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 56px;
+  }
+
+  h6 {
+    font-family: Gilroy-SemiBold;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-bottom: 30px;
+  }
+
+  p {
+    font-family: Gilroy-Regular;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    margin: 0;
+  }
 }
 
 .ourJourneySectionMain {
@@ -467,7 +517,7 @@ p.pagePara {
       position: relative;
 
       .journeyTimeLineInnerL {
-        width: 50%;
+        width: 70%;
         margin-left: auto;
 
       }
@@ -514,6 +564,13 @@ p.pagePara {
         text-align: justify;
         color: #292D32;
         margin: 20px 0 0;
+
+        a:focus,
+        a:hover,
+        a {
+          color: #fff;
+          font-family: Gilroy-SemiBold;
+        }
       }
     }
   }
@@ -582,6 +639,74 @@ p.pagePara {
 
 // Contact Us CSS
 
+.newSubText {
+  font-family: Gilroy-SemiBold;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36.75px;
+  text-align: center;
+  color: #292D32;
+  margin: 40px 0 50px;
+}
+
+.keyHighlightPoints {
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+
+  .experienceBox {
+    background: #C6B2F075;
+    backdrop-filter: blur(6.400000095367432px);
+    box-shadow: 0px 0px 40px 0px #C1D0DC40;
+    padding: 14px 20px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    text-align: left;
+    color: #000000;
+    margin: 0;
+    border-radius: 10px;
+
+    &:nth-child(2) {
+      background: #F0EAB275;
+    }
+
+    &:nth-child(3) {
+      background: #BBF0B275;
+    }
+
+    span {
+      font-family: Gilroy-SemiBold;
+      font-size: 60px;
+      font-weight: 400;
+      line-height: 60px;
+      margin: 0;
+      position: relative;
+      width: fit-content;
+
+      em {
+        position: absolute;
+        right: -25px;
+        top: -16px;
+        color: #ECC243;
+        font-style: normal;
+        font-size: 35px;
+      }
+    }
+
+    b {
+      font-family: Gilroy-Regular;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 26px;
+      letter-spacing: 10px;
+    }
+
+    img {
+      max-width: 44px;
+    }
+  }
+}
+
 .reachOuttoUs {
   background: #F6FBFF;
   color: #292D32;
@@ -617,6 +742,14 @@ p.pagePara {
   .socialIcons {
     img {
       max-width: 30px;
+      transition: .5s all ease-in;
+      filter: grayscale(1);
+      opacity: .6;
+
+      &:hover {
+        filter: grayscale(0);
+        opacity: 1;
+      }
     }
   }
 
@@ -642,9 +775,17 @@ p.pagePara {
       box-shadow: 0px 0px 40px 0px #C1D0DC40;
       border-radius: 20px;
       padding: 25px;
+      color: #292D32;
 
       &:last-child {
         border: none;
+      }
+
+      span {
+        font-family: Gilroy-SemiBold;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 24px;
       }
 
       h4 {
@@ -889,6 +1030,30 @@ header .explore-tray {
   color: #000;
 }
 
+.aaoResearch {
+  gap: 50px;
+  box-shadow: 0px 4px 40px 0px #C1D0DC33;
+  background: #FFFFFF;
+  border-radius: 20px;
+  padding: 20px 60px;
+}
+
+.aaoResearch img {
+  max-width: 200px;
+}
+
+.aaoResearch p {
+  font-family: Gilroy-Regular;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 30.8px;
+  color: #292D32;
+  margin: 0;
+}
+
+.aaoResearch p b {
+  font-family: Gilroy-SemiBold;
+}
 
 .successText {
 
@@ -1883,6 +2048,29 @@ header .explore-tray {
   }
 }
 
+.internalSectGridMain {
+  h3 {
+    font-family: Gilroy-SemiBold;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 33px;
+    text-align: center;
+    color: #292D32;
+    background: #FFFFFFCC;
+    border: 1px solid;
+    border-image-source: linear-gradient(180deg, rgba(255, 255, 255, 0.18) 0%, #FFFFFF 100%);
+    backdrop-filter: blur(36.400001525878906px);
+    box-shadow: 0px 2.69px 36.9px 0px #292D321A;
+    border-radius: 10px;
+    margin-bottom: -50px;
+    position: relative;
+    z-index: 1;
+    // background-color: #fff;
+    width: fit-content;
+    margin-inline: auto;
+    padding: 20px 40px;
+  }
+}
 
 .pageInternalSectionMain {
   background: #F6FBFF;
@@ -1891,32 +2079,41 @@ header .explore-tray {
   .internalSectGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 100px;
+    gap: 90px;
     color: #292D32;
+    background: #ECC243;
+    border-radius: 20px;
+    padding: 100px 70px 50px;
 
-    .internalSectGridInner:nth-child(2) {
-      position: relative;
-
-      &::after,
-      &::before {
-        content: "";
-        position: absolute;
-        height: 100%;
-        width: 1px;
-        background: #D1D1D1;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-      }
-
-      &::after {
-        left: -51px;
-      }
-
-      &::before {
-        right: -50px;
-      }
+    .internalSectGridInner {
+      display: flex;
+      gap: 15px;
+      align-items: start;
     }
+
+    // .internalSectGridInner:nth-child(2) {
+    //   position: relative;
+
+    //   &::after,
+    //   &::before {
+    //     content: "";
+    //     position: absolute;
+    //     height: 100%;
+    //     width: 1px;
+    //     background: #D1D1D1;
+    //     top: 0;
+    //     bottom: 0;
+    //     margin: auto;
+    //   }
+
+    //   &::after {
+    //     left: -51px;
+    //   }
+
+    //   &::before {
+    //     right: -50px;
+    //   }
+    // }
 
     img {
       max-width: 64px;
@@ -1924,18 +2121,20 @@ header .explore-tray {
 
     h2 {
       font-family: Gilroy-SemiBold;
-      font-size: 30px;
+      font-size: 14px;
       font-weight: 400;
-      line-height: 36.75px;
-      margin: 30px 0 20px;
+      line-height: 15.4px;
+      color: #fff;
+      margin: 0 0 6px;
     }
 
     p {
-      font-family: Gilroy-Regular;
-      font-size: 14px;
+      font-family: Gilroy-Medium;
+      font-size: 12px;
       font-weight: 400;
-      line-height: 16.8px;
+      line-height: 13.2px;
       text-align: justify;
+      color: #614904;
       margin: 0;
     }
   }
@@ -2422,11 +2621,13 @@ header .explore-tray {
   border: none;
   color: #000;
   cursor: default;
+  color: #9E9E9E;
 
   &:focus,
   &:hover {
     background: #D9D9D9;
     color: #000;
+    color: #9E9E9E;
   }
 }
 
@@ -2615,6 +2816,10 @@ header .explore-tray {
     padding-inline: 40px;
   }
 
+  .pageInternalSectionMain .internalSectGrid {
+    gap: 40px;
+  }
+
   .ourJourneySection .journeyTimeLineMain .journeyTimeLineInner .journeyTimeLineInnerL {
     width: 80%;
   }
@@ -2688,7 +2893,14 @@ header .explore-tray {
     // max-width: 50%;
   }
 
+  .pageInternalSectionMain .internalSectGrid {
+    gap: 30px;
+    padding: 70px 20px 20px;
+  }
 
+  .pageInternalSectionMain .internalSectGrid .internalSectGridInner{
+    flex-direction: column;
+  }
 
   .gridViewWithFlex {
     grid-template-columns: 1fr;
@@ -2848,10 +3060,26 @@ header .explore-tray {
     line-height: 25px;
   }
 
+  .aaoResearch {
+    flex-wrap: wrap;
+    padding: 15px;
+    gap: 20px;
+  }
+
+  .aaoResearch img {
+    max-width: 70px;
+  }
+
+  .aaoResearch p {
+    font-size: 18px;
+    line-height: 22.8px;
+  }
+
   .schoolVrEcoSystemMain .ecoSystemGrid {
     grid-template-columns: 1fr;
     gap: 15px;
-    img{
+
+    img {
       max-width: 40px;
     }
   }
@@ -3173,9 +3401,22 @@ header .explore-tray {
 
     }
 
+    &:nth-child(4),
+    &:nth-child(6),
+    &:nth-child(8),
     &:nth-child(2) {
       flex-direction: row;
     }
+  }
+
+  .ourMissionVissionCardMain {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+
+
+  .ourMissionVissionCard img {
+    height: 120px;
   }
 
   .d-none-on-web {
@@ -3260,10 +3501,10 @@ header .explore-tray {
     // overflow-x: auto;
 
     .internalSectGridInner {
-      background: rgba(255, 255, 255, 0.6);
-      box-shadow: 0px 0px 40px 0px rgba(193, 208, 220, 0.2509803922);
-      padding: 20px;
-      border-radius: 8px;
+      // background: rgba(255, 255, 255, 0.6);
+      // box-shadow: 0px 0px 40px 0px rgba(193, 208, 220, 0.2509803922);
+      padding: 0;
+      border-radius: 0;
 
       h2 {
         margin: 10px 0;
