--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -3186,6 +3186,7 @@ header .explore-tray {
   &:nth-child(even) {
     &::after{
       transform: rotate(180deg);
+      top: 105px;
     }
   }
 
