--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -3184,7 +3184,7 @@ header .explore-tray {
   }
 
   &:nth-child(even) {
-    &::after{
+    &::after {
       transform: rotate(180deg);
       top: 105px;
     }
@@ -3535,6 +3535,43 @@ header .explore-tray {
     font-size: 22px;
     line-height: 25px;
   }
+
+  .timeline {
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .timeline-item {
+    height: 100%;
+    padding-left: 50px;
+  }
+
+  .timeline::before {
+    height: 100%;
+    width: 3px;
+    top: 0;
+    left: 15px;
+    right: unset;
+  }
+
+  .timeline-item::after {
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: -3px;
+    bottom: 0;
+    right: unset;
+    transform: rotate(90deg);
+    margin: auto;
+    width: 41px;
+    height: 60px;
+  }
+
+  .timeline-item:nth-child(even)::after {
+    top: -20px;
+    transform: rotate(90deg);
+  }
+
 
   .keyHighlightPoints {
     grid-template-columns: 1fr;
