--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -536,7 +536,7 @@ p.pagePara {
   .ourJourneySectionInner {
     img {
       max-width: 270px;
-      border-radius: 30px;
+      // border-radius: 30px;
       // background: #D9D9D9;
     }
 
@@ -1977,6 +1977,16 @@ header .explore-tray {
       margin-bottom: 10px;
     }
 
+    a {
+      font-family: Gilroy-SemiBold;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 14.7px;
+      color: #008EFF;
+      display: inline-block;
+      margin-top: 10px;
+    }
+
     span {
       font-family: Gilroy-Medium;
       font-size: 12px;
@@ -2953,7 +2963,8 @@ header .explore-tray {
   border: none;
   color: #000;
   cursor: default;
-  color: #9E9E9E;
+  color: #3d3d3d;
+  pointer-events: none;
 
   &:focus,
   &:hover {
@@ -3554,6 +3565,15 @@ header .explore-tray {
     right: unset;
   }
 
+  .timeline-item::before {
+    content: "";
+    top: 0;
+    left: -3px;
+    right: unset;
+    width: 38px;
+    height: 39px;
+  }
+
   .timeline-item::after {
     content: "";
     position: absolute;
@@ -3655,7 +3675,25 @@ header .explore-tray {
   }
 
   .playPauseButton {
-    display: none;
+    // display: none;
+    left: 34px;
+    bottom: 15px;
+    padding: 10px;
+  }
+
+  .slick-slider .slick-prev,
+  .slick-slider .slick-next {
+    right: 10px;
+    bottom: -40px;
+    // display: none;
+  }
+
+  .slick-slider .slick-prev {
+    right: 55px;
+  }
+
+  .newImgSlider {
+    height: 387px;
   }
 
   .schoolVrEcoSystemMain {
