--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -52,6 +52,7 @@
       font-weight: 400;
       line-height: 16.8px;
       letter-spacing: 0.47em;
+      text-transform: uppercase;
       color: #000;
     }
   }
