--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -2758,6 +2758,12 @@ header .explore-tray {
         color: #000;
         font-family: Gilroy-Medium;
       }
+      .btn.btn-secondary{
+        justify-content: space-between;
+      }
+      svg{
+        width: fit-content;
+      }
     }
 
 
@@ -2906,6 +2912,14 @@ header .explore-tray {
   background-color: rgba(89, 89, 89, 0.16);
   backdrop-filter: blur(2rem);
 }
+
+.fadeBg{
+  .custom-select-dropdown .custom-select-dropdown-inner__control,
+  .custom-select-dropdown-inner__control.custom-select-dropdown-inner__control--menu-is-open {
+    background-color: #f4f4f4;
+  }
+}
+
 
 .custom-select-dropdown-inner__menu-portal {
 
