--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -6,10 +6,91 @@
   place-content: center;
   padding-top: 70px;
 
+  &.grant-banner {
+    background: url("/img/banner-bg-2.png") center/cover;
+  }
+
+  &.svs-new-banner {
+    background: url("/img/banner-bg-3.png") center/cover;
+  }
+
+  &.svi-banner {
+    background: url("/img/banner-bg-4.png") center/cover;
+
+    .absImageBanner1 {
+      width: 101px;
+      height: 101px;
+      top: -20px;
+      left: 20%;
+    }
+
+    .absImageBanner2 {
+      width: 69px;
+      height: 69px;
+      top: 80px;
+      right: 25%;
+    }
+  }
+
+  .percentage {
+    width: 101px;
+    height: 101px;
+    border-radius: 100%;
+    background: #FFFFFF7D;
+    backdrop-filter: blur(20px);
+    box-shadow: 0px 0px 10px 0px #292D321A;
+    font-family: Gilroy-SemiBold;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 49px;
+    text-align: center;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: -20px;
+    right: 20px;
+
+    span {
+      font-family: Gilroy-Regular;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 16.8px;
+      letter-spacing: 0.62em;
+      text-align: center;
+      color: #fff;
+    }
+  }
+
+  .absImageBanner1 {
+    position: absolute;
+    width: 69px;
+    height: 69px;
+    top: -20px;
+    left: 30%;
+  }
+
+  .absImageBanner2 {
+    position: absolute;
+    width: 98px;
+    height: 98px;
+    top: -20px;
+    right: 20%;
+  }
+
   .hero-image {
     position: relative;
     display: grid;
     place-content: center;
+
+    picture {
+
+      img {
+        height: 320px;
+      }
+    }
 
     .bag {
       max-width: 208px;
@@ -46,7 +127,7 @@
     align-items: center;
 
     .hero-title {
-      margin: 40px 0;
+      margin: 40px 0 90px;
       font-family: Gilroy-Regular;
       font-size: 14px;
       font-weight: 400;
@@ -56,6 +137,47 @@
       color: #000;
     }
   }
+}
+
+.bannerSwiper {
+
+  .swiper-pagination {
+    bottom: 160px;
+
+    .swiper-pagination-bullet {
+      width: 13px;
+      height: 13px;
+      background: #D4D4D4;
+      opacity: 1;
+
+      &.swiper-pagination-bullet-active {
+        background: #ECC243;
+      }
+    }
+  }
+
+  .swiper-button-next:after,
+  .swiper-button-prev:after {
+    display: none;
+  }
+
+  .swiper-button-next {
+    right: 88px;
+  }
+
+  .swiper-button-prev {
+    left: 88px;
+  }
+
+  .swiper-button-prev svg,
+  .swiper-button-next svg {
+    color: #fff;
+    font-size: 30px;
+  }
+}
+
+.calenIcon {
+  max-width: 38px;
 }
 
 
