--- a/src/assets/scss/layout/_banner.scss
+++ b/src/assets/scss/layout/_banner.scss
@@ -7,15 +7,15 @@
   padding-top: 70px;
 
   &.grant-banner {
-    background: url("/img/banner-bg-2.png") center/cover;
+    background: url("/img/banner-bg-2.webp") center/cover;
   }
 
   &.svs-new-banner {
-    background: url("/img/banner-bg-3.png") center/cover;
+    background: url("/img/banner-bg-3.webp") center/cover;
   }
 
   &.svi-banner {
-    background: url("/img/banner-bg-4.png") center/cover;
+    background: url("/img/banner-bg-4.webp") center/cover;
 
     .absImageBanner1 {
       width: 101px;
