--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -5,6 +5,10 @@
   overflow: hidden;
 }
 
+.no-scroll {
+  overflow: hidden !important;
+}
+
 .not-found {
   max-width: 500px;
   margin: 5rem auto;
@@ -1484,6 +1488,7 @@ header .explore-tray {
     img {
       max-width: 56px;
       object-fit: contain;
+      border-radius: 4px;
     }
 
     p {
@@ -3371,12 +3376,13 @@ header .explore-tray {
   border: none;
   border-radius: 0;
   backdrop-filter: none;
+  overflow: hidden;
 
   .btn-close {
     padding: 0.1rem;
-    position: fixed;
-    top: 2rem;
-    right: 2rem;
+    position: fixed !important;
+    top: 20% !important;
+    right: 20% !important;
     position: absolute;
     right: 300px;
     top: 50px;
@@ -3384,7 +3390,123 @@ header .explore-tray {
     background: none;
     width: 2rem;
     height: 2rem;
+    display: none;
   }
+
+  button.closeCalen {
+    position: fixed;
+    bottom: 22px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 99;
+    background: transparent;
+    transition: fit-content;
+    height: fit-content;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: red;
+    border: 2px solid red;
+    width: fit-content;
+    font-family: Gilroy-SemiBold;
+  }
+}
+
+.blog-carousel {
+  padding-top: 50px;
+
+  .swiper-wrapper {
+    padding: 0 0 60px;
+  }
+
+  h2 {
+    font-family: Gilroy-SemiBold;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 50px;
+    color: #292D32;
+  }
+
+  p.desc {
+    font-family: Gilroy-SemiBold;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    color: #292D32;
+    margin: 10px 0 50px;
+  }
+
+  .blogsCards {
+    background: #fff;
+    border-radius: 20px;
+    padding: 18px;
+    border: 1px solid #D1D1D1;
+    transition: .5s all ease;
+
+    &:hover {
+      background: #F5F5F5;
+    }
+
+    img {
+      height: 130px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    span {
+      font-family: Gilroy-Light;
+      font-size: 10px;
+      font-weight: 400;
+      line-height: 14.01px;
+      color: #000000;
+      margin-top: 13px;
+      display: inline-block;
+    }
+
+    h2 {
+      font-family: Gilroy-SemiBold;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 23.02px;
+      color: #000000;
+      margin: 16px 0 4px;
+    }
+
+    p {
+      font-family: Gilroy-Light;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 19.61px;
+      color: #000;
+      margin-bottom: 20px;
+    }
+
+    .read-more {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      width: 100%;
+      font-family: Gilroy-SemiBold;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 17.15px;
+      text-align: justify;
+      color: #292D32;
+
+      svg {
+        width: fit-content;
+      }
+    }
+
+  }
+
+
+  .blog-carousel-body {
+    max-width: 85%;
+    // padding-inline: 100px;
+    margin: auto;
+  }
+
 }
 
 @media (max-width: 1199px) {
@@ -3671,6 +3793,22 @@ header .explore-tray {
   .joinUsSection .joinUsKeyPoints .pageHeadText {
     font-size: 22px;
     line-height: 25px;
+  }
+
+  .blog-carousel h2 {
+    font-size: 24px;
+    line-height: 20px;
+  }
+
+  .modal.noBgAndPadding .form-section {
+    height: 90%;
+    margin-bottom: auto;
+    overflow-y: auto;
+  }
+
+  .blog-carousel p.desc {
+    font-size: 13px;
+    margin-bottom: 30px;
   }
 
   .swiper-button-next,
